--- a/BSAI25049_Home.html
+++ b/BSAI25049_Home.html
@@ -9,7 +9,7 @@
     <header class ="site_header">
         <div class = "logo">
             <img src="BSAI25049Rlogo.jpeg" alt ="Logo" class ="logo-img">
-            <span>Mahad Resturant</span>
+            <span>Mahad Desi and Fast food Resturant</span>
         </div>
         <nav class = "navigation-bar">
         <a href = "BSAI25049_Home.html" >Home</a>
